# OSTIS

./: CMakeLists.txt  README.md  repo.path
knowledge-base/partners-domain/: partners_data.scs  run_test.scs
knowledge-base/react_domain/concepts/classes/: concept_application.scs  concept_functional_component.scs  concept_hook.scs
knowledge-base/react_domain/concepts/relations/: nrel_hook_name.scs  nrel_uses_hook.scs  rrel_root_component.scs
knowledge-base/react_domain/entities/: my_react_app.scs
knowledge-base/react_domain/templates/: template_find_app_by_root_component.scs  template_find_hook_names_for_component.scs  template_find_hook_names_from_app.scs  template_find_hooks_for_component.scs  template_find_root_component_for_app.scs
problem-solver/cxx/: CMakeLists.txt
problem-solver/cxx/partners_module/: CMakeLists.txt  partners_module.cpp  partners_module.hpp
problem-solver/cxx/partners_module/agent/: find_intersection_agent.cpp  find_intersection_agent.hpp  find_union_agent.cpp  find_union_agent.hpp  utils.hpp
problem-solver/cxx/partners_module/keynodes/: partners_keynodes.hpp
problem-solver/cxx/partners_module/test/: partners_agent_tests.cpp
